--- a/apps/releaseman/priv/templates/index.html
+++ b/apps/releaseman/priv/templates/index.html
@@ -9,6 +9,6 @@
 <script src='/static/nitrogen/bullet.js' type='text/javascript' charset='utf-8'></script>
 <script src='/static/nitrogen/n2o.js' type='text/javascript' charset='utf-8'></script>
 <script src='/static/nitrogen/bert.js' type='text/javascript' charset='utf-8'></script>
-</script><div id="n2ostatus"></div>
+</script><div id="n2ostatus" style="display:none"></div>
 </body>
 </html>
