--- a/apps/releaseman/priv/templates/releaseman.html
+++ b/apps/releaseman/priv/templates/releaseman.html
@@ -1,14 +1,35 @@
 <html>
 <head>
 <title>{{title}}</title>
+
+<!-- Latest compiled and minified CSS -->
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc2/css/bootstrap.min.css" rel="stylesheet">
+<!-- Latest compiled and minified JavaScript -->
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc2/js/bootstrap.min.js"></script>
+<!-- Latest Glyphicons minified CSS -->
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc2/css/bootstrap-glyphicons.css" rel="stylesheet">
+
 </head>
+
 <body>
-{{body}}
+<div class="container">
+    {{body}}
+</div>
+
+<footer class="navbar navbar-fixed-bottom">
+    <div class="container">
+        <h5>Voxoz</h5>
+    </div>
+</footer>
+
+
 <script>{{script}}</script>
 <script src='/static/nitrogen/jquery.js' type='text/javascript' charset='utf-8'></script>
 <script src='/static/nitrogen/bullet.js' type='text/javascript' charset='utf-8'></script>
 <script src='/static/nitrogen/n2o.js' type='text/javascript' charset='utf-8'></script>
 <script src='/static/nitrogen/bert.js' type='text/javascript' charset='utf-8'></script>
+
 </script><div id="n2ostatus" style="display:none"></div>
 </body>
 </html>
+
