--- a/apps/releaseman/priv/templates/releaseman.html
+++ b/apps/releaseman/priv/templates/releaseman.html
@@ -3,13 +3,32 @@
 <title>{{title}}</title>
 
 <!-- Latest compiled and minified CSS -->
-<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc2/css/bootstrap.min.css" rel="stylesheet">
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
 <!-- Latest Glyphicons minified CSS -->
-<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc2/css/bootstrap-glyphicons.css" rel="stylesheet">
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
+
+<style>
+.navbar {
+  background-color: #144657;
+  border: none;
+  border-radius: 0px;
+}
+
+.navbar-brand {
+  color: white !important;
+}
+</style>
 
 </head>
 
 <body>
+
+<nav class="navbar navbar-default" role="navigation">
+  <div class="navbar-header">
+    <a class="navbar-brand" href="/">vxzbuild</a>
+  </div>
+</nav>
+
 <div class="container">
     {{body}}
 </div>
@@ -21,7 +40,7 @@
 <script src='/static/nitrogen/bert.js' type='text/javascript' charset='utf-8'></script>
 
 <!-- Latest compiled and minified JavaScript -->
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc2/js/bootstrap.min.js"></script>
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 
 </script><div id="n2ostatus" style="display:none"></div>
 </body>
