--- a/apps/releaseman/priv/templates/releaseman.html
+++ b/apps/releaseman/priv/templates/releaseman.html
@@ -14,9 +14,10 @@
   border-radius: 0px;
 }
 
-.navbar-brand {
+.navbar-brand, .nav-link {
   color: white !important;
 }
+
 </style>
 
 </head>
@@ -24,9 +25,13 @@
 <body>
 
 <nav class="navbar navbar-default" role="navigation">
-  <div class="navbar-header">
-    <a class="navbar-brand" href="/">vxzbuild</a>
-  </div>
+    <div class="navbar-header">
+        <a class="navbar-brand" href="/">vxzbuild</a>
+    </div>
+
+    <div class="collapse navbar-collapse navbar-ex1-collapse">
+        {{navcollapse}}
+    </div>
 </nav>
 
 <div class="container">
