--- a/apps/releaseman/priv/templates/releaseman.html
+++ b/apps/releaseman/priv/templates/releaseman.html
@@ -26,7 +26,7 @@
 
 <nav class="navbar navbar-default" role="navigation">
     <div class="navbar-header">
-        <a class="navbar-brand" href="/">vxzbuild</a>
+        <a class="navbar-brand" href="/">GIR</a>
     </div>
 
     <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -35,6 +35,7 @@
 </nav>
 
 <div class="container">
+    <img src="http://images4.wikia.nocookie.net/__cb20130421151513/protagonist/images/0/00/Gir.png" height=100>
     {{body}}
 </div>
 
