--- a/apps/releaseman/priv/templates/releaseman.html
+++ b/apps/releaseman/priv/templates/releaseman.html
@@ -35,7 +35,7 @@
 </nav>
 
 <div class="container">
-    <img src="http://images4.wikia.nocookie.net/__cb20130421151513/protagonist/images/0/00/Gir.png" height=100>
+    <img src="http://3.bp.blogspot.com/_-7Mc6XALDJU/TU9D2K_NcAI/AAAAAAAAAEA/yAPlmktwWkY/s1600/gir-1.png" height=150>
     {{body}}
 </div>
 
