--- a/apps/releaseman/priv/templates/releaseman.html
+++ b/apps/releaseman/priv/templates/releaseman.html
@@ -1,9 +1,76 @@
 <html>
 <head>
 <title>{{title}}</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=IE10,chrome=1" />
+<link rel=stylesheet type="text/css" href="/static/css/synrc.css">
 </head>
 <body>
+
+<div class="nonselectedwrapper white" style="padding: 30 10 0 0;margin: 0 0 -12 0;">
+<div class="verywidecol">
+<nobr>
+    <a href="http://synrc.com/index.htm">
+    <img style="float:left;margin-right:10px;" src="http://synrc.com/images/synrc.png" border="0"></a>
+</nobr>
+</div>
+</div>
+
+<div class="clear"></div>
+
+<hr size="1">
+
+<DIV CLASS="nonselectedwrapper">
+<DIV CLASS="article">
+<DIV CLASS="smallcol">
+    <center><p><IMG SRC="/static/img/knot.png" width=150></p><br>
+    <a href="/">Releases</a><br><br>
+    <a href="#">Timeline</a></center>
+</DIV>
+<DIV CLASS="articlecol">
+
 {{body}}
+
+</div>
+</div>
+</div>
+
+<div class="nonselectedwrapper">
+<div class="verywidecol">
+
+    <div style="width:100%;height:300px;float:left;font-size:14pt;" align=center>
+    	<hr size=1>
+        <span class="logo_font" style="font-size:14pt;">
+            <b><font color="#0033cc">syn</font><font color="#ff0000">rc</font></b></span> uses H<FONT SIZE=1><sup>E</sup></FONT>V<FONT SIZE=1><sup>E</sup></FONT>A<br>
+        <a href="http://build.synrc.com/">Сontinuous Integration</a> |
+        <a href="http://synrc.com/news">Events</a> |
+        <a href="http://voxoz.com">Erlang PaaS</a> |
+        <a href="http://synrc.com/music">Music</a><br>
+    	<a href="http://synrc.com/privacy.htm">Privacy Policy</a> |
+        <a href="http://synrc.com/feedback.htm">Feedback</a> |
+        <a href="http://synrc.com/brandbook.htm">Brandbook</a><br>
+    	Copyright &copy; 2005&ndash;2013 <a href="http://synrc.com/index.htm"> Synrc Research Center s.r.o.</a>
+    </div>
+
+</div>
+</div>
+
+<div class="clear"></div>
+
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-29227518-1']);
+      _gaq.push(['_trackPageview']);
+      
+        (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+                ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+                    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+                      })();
+                      
+                      </script>
+
 <script>{{script}}</script>
 <script src='/static/nitrogen/jquery.js' type='text/javascript' charset='utf-8'></script>
 <script src='/static/nitrogen/bullet.js' type='text/javascript' charset='utf-8'></script>
