--- a/apps/releaseman/priv/templates/releaseman.html
+++ b/apps/releaseman/priv/templates/releaseman.html
@@ -24,8 +24,7 @@
 <DIV CLASS="article">
 <DIV CLASS="smallcol">
     <center><p><IMG SRC="/static/img/knot.png" width=150></p><br>
-    <a href="/">Releases</a><br><br>
-    <a href="#">Timeline</a></center>
+    <a href="/">Dashboard</a>
 </DIV>
 <DIV CLASS="articlecol">
 
