--- a/apps/releaseman/priv/templates/releaseman.html
+++ b/apps/releaseman/priv/templates/releaseman.html
@@ -71,10 +71,10 @@
                       </script>
 
 <script>{{script}}</script>
-<script src='/static/nitrogen/jquery.js' type='text/javascript' charset='utf-8'></script>
+<!--script src='/static/nitrogen/jquery.js' type='text/javascript' charset='utf-8'></script>
 <script src='/static/nitrogen/bullet.js' type='text/javascript' charset='utf-8'></script>
 <script src='/static/nitrogen/n2o.js' type='text/javascript' charset='utf-8'></script>
-<script src='/static/nitrogen/bert.js' type='text/javascript' charset='utf-8'></script>
+<script src='/static/nitrogen/bert.js' type='text/javascript' charset='utf-8'></script-->
 </script><div id="n2ostatus" style="display:none"></div>
 </body>
 </html>
